# BetaWatch

./: Makefile  sdkconfig  sdkconfig.old
main/: Accelero_et_Gyro.c  Accelero_et_Gyro.h  BLE.c  BLE.h  CMakeLists.txt  Clock.c  Clock.h  Gpio_bw.c  Gpio_bw.h  HTS221_user.c  HTS221_user.h  I2C.c  I2C.h  Kconfig.projbuild  LPS_user.c  LPS_user.h  Magnetometer.c  Magnetometer.h  dataManagement.c  dataManagement.h  lps22hh_reg.c  lps22hh_reg.h  lv.c  lv.h  main.c  rv3029c2_reg.c  rv3029c2_reg.h  timer_bw.c  timer_bw.h
main/BLE/: ble_init.c  gatt_server_profile.c  gatt_server_profile.h
main/HTS221_REG/: hts221_reg.c  hts221_reg.h
main/LSM6DSO/: lsm6dso_reg.c  lsm6dso_reg.h
