idf_component_register(SRCS  "Gpio_bw.c" "timer_bw.c" "dataManagement.c" "lv.c" "main.c" "lps22hh_reg.c" "LPS_user.c" 
"Accelero_et_Gyro.c" "lsm6dso_reg.c" "BLE.c" "./BLE/ble_init.c" "./BLE/gatt_server_profile.c" "./HTS221_REG/hts221_reg.c" "HTS221_user.c"
                    INCLUDE_DIRS "." "BLE" "HTS221_REG") 
