idf_component_register(SRCS  "rv3029c2_reg.c" "Clock.c" "Gpio_bw.c" "timer_bw.c" "dataManagement.c" "lv.c" "main.c" "lps22hh_reg.c" "LPS_user.c" 
"Accelero_et_Gyro.c" "lsm6dso_reg.c" "BLE.c" "./BLE/ble_init.c" "./BLE/gatt_server_profile.c" 
"I2C.c" "lis2mdl_reg.c" "Magnetometer.c" 
                    INCLUDE_DIRS "." "BLE" ) 
